# victory

./: .env.example  .env.production  .gitignore  .replit  .rspec  .rubocop.yml  CLAUDE.md  CRITICAL_COMPONENTS_REPORT.md  CURRENT_STATE.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_UPDATE_LOG.md  FINAL_REPORT.md  Gemfile  PROGRESS_UPDATE.md  PROJECT_STATUS_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SESSION_PROGRESS_2.md  SESSION_SUMMARY.md  STARTUP_GUIDE.md  STATUS.md  SUMMARY.md  TESTING_GUIDE.md  brief.json  crew_design_spec.yml  docker-compose-db.yaml  llm_matrix.yml  mise.toml  openrouter_models_cache.json  package-lock.json  replit.md  tailwind.config.js  tasks_spec.yml  validation_report.md
app/channels/: chat_channel.rb
app/controllers/: application_controller.rb  contact_forms_controller.rb  dashboard_controller.rb  home_controller.rb  landing_controller.rb  pages_controller.rb  properties_controller.rb  property_valuations_controller.rb
app/helpers/: application_helper.rb  properties_helper.rb
app/jobs/: application_job.rb  inquiry_notification_job.rb  property_valuation_completed_job.rb  property_valuation_follow_up_job.rb  viewing_notification_job.rb  (+2 more)
config/: application.rb  cable.yml  database.yml  puma.rb  routes.rb  schedule.rb  sidekiq.yml  storage.yml  tailwind.config.js
db/: seeds.rb
deals/: brief.json  crew_design_spec.yml  llm_matrix.yml  openrouter_models_cache.json  pyproject.toml  tasks_spec.yml  validation_report.md
spec/: rails_helper.rb  spec_helper.rb
(+117 files in other folders)
